# libcaparoc

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  publish-release.yml  release-build.yml  release.yml
build-fetchcheck/: CMakeCache.txt  Makefile  cmake_install.cmake
doc/: ERROR_MONITORING.md
include/caparoc/: caparoc.hpp  registers.hpp  registers_generated.hpp
input/: generate_registers.py
src/: caparoc.cpp
